[package]
name = "quic_reflection_atk"
version = "0.1.0"
rust-version = "1.81"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
quinn = "0.11.5"
tokio = {version = "1.40.0", features = ["full"]}
